--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "mocha 'test/**/*.test.js' --no-timeouts && npm run eslint",
+    "test:mocha": "mocha 'test/**/*.test.js' --no-timeouts",
+    "test": "npm run test:mocha && npm run eslint",
     "eslint": "eslint './**/*.js'"
   },
   "files": [
