--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js --conf=../.private/settings",
+    "start": "node src/index.js --conf=.private/settings",
     "test:mocha": "mocha 'test/**/*.test.js' --no-timeouts",
     "test": "npm run test:mocha && npm run eslint",
     "eslint": "eslint './**/*.js'"
